Small addition to our page content.

--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello New Adventure!</title>
+	<title>Hello New Adventure! This would be great!</title>
 </head>
 <body>
 <h1>Hello New Adventure!<h1>
