--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,14 @@
-<!DOCTYPE html>
-<html>
+<!Doctype html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Hello New Adventure!</title>
+	<script src="script.js"></script>
+	<script> 
+	console.log(x)
+	</script>
+	<title> This course is cool!</title>
 </head>
 <body>
-<h1>Hello New Adventure! This would be great!<h1>
+	This course is cool! I'm learning so much! 
 </body>
 </html>
